# raygpu

./: .clang-format  .clang-tidy  .gitignore  .ignore  CMakeLists.txt  InitWindow.cpp  Makefile  README.md  example.cpp  lsan.supp  mathutils.h  printsource.py  pybindtest.cpp  pyraygpu.cpp  raygpu.cpp  raygpu.h  sache.tar  shapes.cpp  vertex_buffer.hpp  wgpustate.inc
bindings/python/: pyraygpu.cpp  test.py
cmake/: raygpuConfig.cmake.in
examples/: CMakeLists.txt  benchmark_cubes.cpp  benchmark_tilemap.cpp  compute.cpp  core_camera2d.c  core_camera3d.c  core_fonts.c  core_headless.c  core_msaa.c  core_multiwindow.c  core_rendertexture.c  core_resizable.c  core_screenrecord.cpp  core_shapes.c  core_vsync_fullscreen.c  core_window.c  glsl_to_spirv.cpp  glsl_to_wgsl.cpp  glslangex.cpp  input_keys.c  input_multitouch_gesture.c  input_text.c  memory_vma_allocator.c  models_cube.c  models_forwardkinematics.cpp  models_glb.cpp  models_gpu_skinning.cpp  models_lights.cpp  models_obj.cpp  models_raytracing.cpp  pipeline_basic.c  pipeline_constants.cpp  pipeline_instancing.cpp  pipeline_settings.c  pipeline_spirv.cpp  pipeline_uniforms.cpp  plain_wgvk.c  shader_inspection.cpp  shaders_basic.c  shaders_glsl.cpp  (+10 more)
include/: config.h  enum_translation.h  internals.hpp  macros_and_constants.h  mathutils.h  pipeline.h  raygpu.h  raylib.h  renderstate.hpp  renderstate.inc  tint_c_api.h  wgpustate.hpp  wgpustate.inc  wgvk.h  wgvk_structs_impl.h
resources/: base.wgsl  default.frag  default.frag.spv  default.vert  default.vert.spv  hvk.vert  hvk.vert.spv  lightmap.fs  lightmap.vs  minimal.html  simple.frag  simple.spv  simple.vert  simple_compute.wgsl  simple_shader.wgsl
src/: InitWindow.cpp  InitWindow_GLFW.cpp  InitWindow_RGFW.cpp  InitWindow_SDL.cpp  InitWindow_SDL2.cpp  InitWindow_SDL3.cpp  backend_wgpu.cpp  cgltf_impl.c  dawn_glfwrip.cpp  example.cpp  glsl_support.cpp  init_vulkan.cpp  models.cpp  msf_gif_impl.c  pipeline.cpp  raygpu.cpp  reference_sample.cpp  rgfw_impl.c  rgfwwebgpu.c  rshapes.cpp  rtext.c  sdl2webgpu.c  sdl3webgpu.cpp  sdl3webgpu.h  shader_parse.cpp  shapes.cpp  sinfl_impl.c  stb_impl.c  telegrama_render_literal.inc  wgsl_compiler.c  wgvk_to_wgpu.cpp  windows_stuff.c
src/backend_vulkan/: backend_vulkan.cpp  init_vulkan.cpp  ptr_hash_map.h  tint_c_api.cpp  vma_impl.cpp  volk.c  vulkan_descriptors.cpp  vulkan_internals.hpp  vulkan_pipeline.cpp  vulkan_raytracing.cpp  vulkan_textures.cpp  wgvk.c  wgvk.cpp
src/cmake/: w64-mingw.cmake
src/test/: hash_map_test.c  test_cc.c
